--- a/src/app/heroes/listado/listado.component.html
+++ b/src/app/heroes/listado/listado.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="heroeBorrado; else noBorrado">
     <h3>Heroe borrado: <small> {{heroeBorrado}} </small></h3>
 </div>
-<<ng-template #noBorrado>
+<ng-template #noBorrado>
     <h3>No se ha borrado nada </h3>
 </ng-template>
 
