--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<app-main-page></app-main-page>
+<!-- <app-listado></app-listado> -->
 <!-- <app-heroe></app-heroe> -->
-<app-contador></app-contador>
-<app-listado></app-listado>
+<!-- <app-contador></app-contador> -->
+
+
+
